M       vbm_vol_eidist.c
M       vbm_vol_eidist.mexa64
M       vbm_vol_eidist.mexmaci64
M       vbm_vol_eidist.mexw32
M       vbm_vol_eidist.mexw64
M       vbm_vol_eikonal3.mexw32
M       vbm_vol_eikonal3.mexw64
M       vbm_vol_genus0.mexw32
M       vbm_vol_genus0.mexw64
M       vbm_vol_gradient3.mexw32
M       vbm_vol_gradient3.mexw64
M       vbm_vol_interp3f.mexw32
M       vbm_vol_interp3f.mexw64
M       vbm_vol_laplace3.mexw32
M       vbm_vol_laplace3.mexw64
M       vbm_vol_laplace3R.mexw32
M       vbm_vol_laplace3R.mexw64
M       vbm_vol_localstat.mexw32
M       vbm_vol_localstat.mexw64
M       vbm_vol_median3.mexw32
M       vbm_vol_median3.mexw64
M       vbm_vol_median3c.mexw32
M       vbm_vol_median3c.mexw64
M       vbm_vol_pbtp.mexw32
M       vbm_vol_pbtp.mexw64
M       vbm_vol_simgrow.mexw32
M       vbm_vol_simgrow.mexw64

(1) Changed default definition of SUER in distribute_to_server.sh that worked
    not properly.
(2) Some slight changes in cg_check_cov.m.
(3) Changed vbm_vol_eidist.c according to standard gcc.
(4) Recompiled mexfiles.
------------------------------------------------------------------------
r569 | gaser | 2014-02-07 10:45:44

M       CHANGES.txt
M       cg_vbm_batch.m
 M      templates_1.50mm/vbm12.nii

Corrected wrong handling of WMH in cg_vbm_batch.m.
------------------------------------------------------------------------
r570 | gaser | 2014-02-07 11:01:42

M       CHANGES.txt
M       tbx_cfg_vbm.m
M       vbm12.man

removed too li,iting ufilter in tbx_cfg_vbm.m.
------------------------------------------------------------------------
r571 | gaser | 2014-02-10 10:52:27

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man
M       vbm_vol_atlas.m
M       vbm_vol_morph.m
M       vbm_vol_partvol.m
M       vbm_vol_pbt.m
M       vbm_vol_t1qacalc.m

Matlab R2007a does not accept terms such as [~,m] = function.
------------------------------------------------------------------------
r572 | gaser | 2014-02-10 11:09:51